--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="ModulTxV">Modul</string>
     <string name="SearchButton">Search</string>
     <string name="GreetingMsg"> Herzlich Wilkommen bei Find n\' Learn! \n Sag uns doch bitte wie du heißt! </string>
+    <string name="BeitretenBtn">JOIN</string>
 </resources>
